2005-04-01	Florian Boor  	<florian.boor@kernelconcepts.de>

	* HACKING: Update tasks.
	* theme.c: Fixed Xdefaults scanning.
	* main.c: Fixed infoprints.
	* keys/keyctl.c, data/key-layout: Add parameters to set image position.
	* data/key-layout, pixmaps/ipaq-s1.png: Adjusted size and positions.

2005-03-30	Florian Boor  	<florian.boor@kernelconcepts.de>

	* gpe-admin.c, storage.c, battery.c: Don't use render.h.
	* keyctl.c: Add sanity checks.
	* Makefile: Don't install obsolete ipaq.png, don't strip binaries.

2005-03-25	Florian Boor  	<florian.boor@kernelconcepts.de>

	* keyboard.c: Change kbdd restart to use the new script.

2005-03-15	Florian Boor  	<florian.boor@kernelconcepts.de>

	* keys.c, keyboard.c: Implemented restarting of kbdd. 
	* keyctl.c: Fixed some minor bugs, implemented removing of definitions.
	* key-commands: Added definition for "no command".
	* network.c: Removed possebility to remove global tab.
	             Minor GUI layout fixes.

2005-03-11	Florian Boor  	<florian.boor@kernelconcepts.de>

	* Removed several obsolete inclusions of render.h.

2005-03-05	Florian Boor  	<florian.boor@kernelconcepts.de>

	* keys/keyboard.c: Improved GUI layout and implementation.
	* keys/keyctl.c: Fixed parser bugs.
	* keys/keys.c: Add saving support for all applets.
	* data/key-layout: Moved to less stupid default.

2005-03-05	Florian Boor  	<florian.boor@kernelconcepts.de>

	* kbd/keyboard.c: Add some more bits for kbdd configuration support.
	                  Reodered keyboard list.
					  Missing: Description handling, GUI fixes, IR devices
	* serial.h: Publish port list.
	* data/key-commands: Add suspend command.
	
2005-03-04	Florian Boor  	<florian.boor@kernelconcepts.de>

	* keys/keyboard.c: Add some more bits for kbdd configuration support.
	* suid.c: Save keyboard config.
	
2005-03-02	Florian Boor  	<florian.boor@kernelconcepts.de>

	* keys/keyboard.c: Add some more bits for kbdd configuration support.
	* main.c: Show infoprint on save.
	